[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "osidb-mcp"
version = "0.1.4"
description = "Model Context Protocol (MCP) server for OSIDB using osidb-bindings"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "osidb-mcp contributors" }]
keywords = ["mcp", "osidb", "security", "cve", "kerberos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "mcp>=1.0,<2",
  "osidb-bindings>=5.10.0,<6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pip-audit>=2.7"]

[project.scripts]
osidb-mcp = "osidb_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/vdanen/osidb-mcp"
Repository = "https://github.com/vdanen/osidb-mcp"
Issues = "https://github.com/vdanen/osidb-mcp/issues"
PyPI = "https://pypi.org/project/osidb-mcp/"

[tool.hatch.build.targets.sdist]
include = ["src/osidb_mcp", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
